k8-resources/java-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  type: NodePort
  selector:
    app: java-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30007
      name: web
